adjusting test data to match example